--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,16 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
   intl: ^0.20.2
+  flex_color_scheme: ^8.2.0
+  drift: ^2.28.0
+  path_provider: ^2.1.5
+  drift_flutter: ^0.2.4
+ 
 
 dev_dependencies:
+
+  drift_dev: ^2.28.1-dev.0
+  build_runner: ^2.6.0-dev.1
   flutter_test:
     sdk: flutter
 
