--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   drift: ^2.28.0
   path_provider: ^2.1.5
   drift_flutter: ^0.2.4
+  get: ^4.7.2
+  shared_preferences: ^2.5.3
  
 
 dev_dependencies:
@@ -83,15 +85,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Vazir
+      fonts:
+        - asset: assets/fonts/Vazir-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Regular.ttf
+
+    - family: YekanBakh
+      fonts:
+        - asset: assets/fonts/YekanBakh-Regular.ttf    
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
