--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   rename: ^3.1.0
   package_info_plus: ^8.3.0
   dio: ^5.8.0+1
+  bloc: ^9.0.0
+  equatable: ^2.0.7
+  flutter_bloc: ^9.1.1
  
 
 dev_dependencies:
