--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.0+1
+version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
@@ -51,6 +51,9 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_spinkit: ^5.2.1
   lottie: ^3.3.1
+  url_launcher: ^6.3.2
+
+  appcheck: ^1.5.4+1
  
 
 dev_dependencies:
