--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,12 +1,13 @@
-name: Build Flutter iOS IPA
+name: iOS-ipa-build
 
 on:
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build-ios:
+    name: iOS Build
     runs-on: macos-latest
 
     steps:
@@ -16,13 +17,30 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.35.1'
+          channel: 'stable'
+          architecture: x64
+      - run: flutter pub get   
 
-      - name: Install dependencies
-        run: flutter pub get
+      - run: pod repo update   
+        working-directory: ios
 
       - name: Build iOS IPA (no signing)
         run: flutter build ipa --release --no-codesign
 
-      - name: Show build folder structure
-        run: ls -R build/ios
+      - run: mkdir Payload
+        working-directory: build/ios/iphoneos
+
+      - run: mv Runner.app/Payload
+
+      - name: Zip output
+        run: zip -qq -r -9 FlutterIpaExport.ipa Payload 
+        working-directory: build/ios/iphoneos
+
+      - name: Upload binaries to release  
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: build/ios/iphoneos/FlutterIpaExport.ipa
+          tag: v.1.0
+          overwrite: true
+          body: "This is my release text"
