--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,8 +1,6 @@
 name: iOS-ipa-build
 
 on:
-  # push:
-  #   branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -27,20 +25,20 @@ jobs:
       - name: Build iOS IPA (no signing)
         run: flutter build ipa --release --no-codesign
 
-      - run: mkdir Payload
-        working-directory: build/ios/iphoneos
-
-      - run: mv Runner.app/Payload
+      - name: Move Runner.app into Payload
+        run: |
+          mkdir -p Payload
+          mv build/ios/ipa/Payload/Runner.app Payload/
 
       - name: Zip output
         run: zip -qq -r -9 FlutterIpaExport.ipa Payload 
-        working-directory: build/ios/iphoneos
+        working-directory: .
 
       - name: Upload binaries to release  
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/ios/iphoneos/FlutterIpaExport.ipa
-          tag: v.1.0
+          file: FlutterIpaExport.ipa
+          tag: v1.0
           overwrite: true
           body: "This is my release text"
