--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,11 +1,13 @@
-name: iOS-ipa-build
+name: iOS IPA Build and Release
 
 on:
-  workflow_dispatch:
+  push:
+    tags:
+      - 'v*'  # فقط زمانی که یک تگ با پیشوند 'v' پوش می‌شود اجرا شود (مثل v1.0.0, v2.1.5)
 
 jobs:
-  build-ios:
-    name: iOS Build
+  build-and-release:
+    name: Build iOS IPA and Create Release
     runs-on: macos-latest
 
     steps:
@@ -17,28 +19,34 @@ jobs:
         with:
           channel: 'stable'
           architecture: x64
-      - run: flutter pub get   
 
-      - run: pod repo update   
+      - name: Install CocoaPods dependencies
+        run: pod install
         working-directory: ios
 
       - name: Build iOS IPA (no signing)
         run: flutter build ipa --release --no-codesign
 
-      - name: Move Runner.app into Payload
-        run: |
-          mkdir -p Payload
-          mv build/ios/ipa/Payload/Runner.app Payload/
-
-      - name: Zip output
-        run: zip -qq -r -9 FlutterIpaExport.ipa Payload 
-        working-directory: .
-
-      - name: Upload binaries to release  
-        uses: svenstaro/upload-release-action@v2
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: FlutterIpaExport.ipa
-          tag: v1.0
-          overwrite: true
-          body: "This is my release text"
+          tag_name: ${{ github.ref_name }} # استفاده از نام تگِ همین push
+          release_name: Release ${{ github.ref_name }}
+          body: |
+            iOS IPA built automatically from commit: ${{ github.sha }}
+            - Build date: ${{ steps.get_date.outputs.date }}
+          draft: false
+          prerelease: false
+
+      - name: Upload IPA to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # آپلود به ریلیزی که همین الان ساخته شد
+          asset_path: build/ios/ipa/Runner.ipa
+          asset_name: MyApp-${{ github.ref_name }}.ipa # اسم فایل نهایی
+          asset_content_type: application/octet-stream
