--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -3,7 +3,7 @@ name: iOS IPA Build and Release
 on:
   push:
     tags:
-      - 'v*'  # فقط زمانی که یک تگ با پیشوند 'v' پوش می‌شود اجرا شود (مثل v1.0.0, v2.1.5)
+      - 'v*'  # اجرا فقط وقتی که تگی با پیشوند v پوش بشه (مثل v1.0.0)
 
 jobs:
   build-and-release:
@@ -21,11 +21,15 @@ jobs:
           architecture: x64
 
       - name: Install CocoaPods dependencies
-        run: pod install
+        run: pod repo update && pod install
         working-directory: ios
 
       - name: Build iOS IPA (no signing)
         run: flutter build ipa --release --no-codesign
+
+      - name: Get current date
+        id: get_date
+        run: echo "date=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
         id: create_release
@@ -33,7 +37,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }} # استفاده از نام تگِ همین push
+          tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
           body: |
             iOS IPA built automatically from commit: ${{ github.sha }}
@@ -46,7 +50,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # آپلود به ریلیزی که همین الان ساخته شد
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: build/ios/ipa/Runner.ipa
-          asset_name: MyApp-${{ github.ref_name }}.ipa # اسم فایل نهایی
+          asset_name: MyApp-${{ github.ref_name }}.ipa
           asset_content_type: application/octet-stream
