Add GitHub Actions workflow to build IPA

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,16 +1,12 @@
-name: IPA-Build
+name: iOS IPA Build and Release
 
 on:
   push:
-    branches:
-      - main
     tags:
-      - 'v*'
- # اجرا فقط وقتی که تگی با پیشوند v پوش بشه (مثل v1.0.0)
+      - 'v*'   # اجرا فقط وقتی که تگی با پیشوند v پوش بشه (مثلا v1.0.0)
 
 jobs:
   build-and-release:
-    name: Build iOS IPA and Create Release
     runs-on: macos-latest
 
     steps:
@@ -21,18 +17,12 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          architecture: x64
 
-      - name: Install CocoaPods dependencies
-        run: pod repo update && pod install
-        working-directory: ios
+      - name: Flutter pub get
+        run: flutter pub get
 
       - name: Build iOS IPA (no signing)
         run: flutter build ipa --release --no-codesign
-
-      - name: Get current date
-        id: get_date
-        run: echo "date=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
         id: create_release
@@ -44,7 +34,6 @@ jobs:
           release_name: Release ${{ github.ref_name }}
           body: |
             iOS IPA built automatically from commit: ${{ github.sha }}
-            - Build date: ${{ steps.get_date.outputs.date }}
           draft: false
           prerelease: false
 
